Created Review model and api, added nested router

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ python-dotenv = "*"
 django-debug-toolbar = "*"
 pymysql = "*"
 djangorestframework = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
