Added django filter library

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django-debug-toolbar = "*"
 pymysql = "*"
 djangorestframework = "*"
 drf-nested-routers = "*"
+django-filter = "*"
 
 [dev-packages]
 
