--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-filter = "*"
 djoser = "*"
 djangorestframework-simplejwt = "*"
 pillow = "*"
+redis = "*"
+celery = "*"
 
 [dev-packages]
 
