Created first test for collections using pytest

--- a/Pipfile
+++ b/Pipfile
@@ -16,8 +16,11 @@ djangorestframework-simplejwt = "*"
 pillow = "*"
 redis = "*"
 celery = "*"
+flower = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-django = "*"
 
 [requires]
 python_version = "3.13"
